WHY WON'T THE URL THING JUST WORK

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,8 @@
 [Settings]
-browser = C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
-columns = 3
+browser = \"C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe\"
 [emuNANDTool]
 path = C:\\Users\\Essentio\\Desktop\\emuNANDTool_1.0.3.exe
 [Reboot.MS]
 url = reboot.ms
+[EasyKeyMap Tool]
+path = C:\\Users\\Essentio\\Desktop\\easykeymap_windows_2_03_01\\easykeymap.exe
