--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,35 @@
+
+################################################################################################################################
+#   _____       _ _        _                            _        _____ _        _ _                                   _        #
+#  |  __ \     | | |      | |                          | |      / ____| |      (_) |                 /\              (_)       #
+#  | |  | | ___| | |_ __ _| |     __ _ _   _ _ __   ___| |__   | (___ | |_ _ __ _| | _____  ___     /  \   __ _  __ _ _ _ __   #
+#  | |  | |/ _ \ | __/ _` | |    / _` | | | | '_ \ / __| '_ \   \___ \| __| '__| | |/ / _ \/ __|   / /\ \ / _` |/ _` | | '_ \  #
+#  | |__| |  __/ | || (_| | |___| (_| | |_| | | | | (__| | | |  ____) | |_| |  | |   <  __/\__ \  / ____ \ (_| | (_| | | | | | #
+#  |_____/ \___|_|\__\__,_|______\__,_|\__,_|_| |_|\___|_| |_| |_____/ \__|_|  |_|_|\_\___||___/ /_/    \_\__, |\__,_|_|_| |_| #
+#                                                                                                          __/ |               #
+#                                                                                                         |___/                #
+#																															   #
+################################################################################################################################
+#																															   #
+#      PRECAUTIONS: AT THE MOMENT IT ONLY LAUNCHES URLS WITH "http://" BEFORE THE URL, I'LL TRY TO AUMATIZZATE THE THING       #
+#             ALSO, WHEN YOU PUT A BACKSLASH ("\") YOU HAVE TO DOUBLE IT ("\\"), I'LL TRY TO AUTOMATIZZATE THIS TOO            #
+#																															   #
+################################################################################################################################
+#																															   #
+#                      USE "path" TO LAUNCH AN .exe, AND "url" TO OPEN THE URL INSIDE YOUR DEFAULT BROWSER                     #
+#                                            USE SECTIONS ("[Stuff]") TO NAME THINGS                                           #
+#																															   #
+################################################################################################################################
+#																															   #
+#                                                  YUKIHO KOUSAKA BEST WAIFU                                                   #
+#																															   #
+################################################################################################################################
+
 [Settings]
-browser = \"C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe\"
+# TBD
 [emuNANDTool]
 path = C:\\Users\\Essentio\\Desktop\\emuNANDTool_1.0.3.exe
 [Reboot.MS]
-url = reboot.ms
+url = http://reboot.ms
 [EasyKeyMap Tool]
 path = C:\\Users\\Essentio\\Desktop\\easykeymap_windows_2_03_01\\easykeymap.exe
