Automatically adds http:// to urls

--- a/config.ini
+++ b/config.ini
@@ -11,8 +11,7 @@
 #																															   #
 ################################################################################################################################
 #																															   #
-#      PRECAUTIONS: AT THE MOMENT IT ONLY LAUNCHES URLS WITH "http://" BEFORE THE URL, I'LL TRY TO AUMATIZZATE THE THING       #
-#             ALSO, WHEN YOU PUT A BACKSLASH ("\") YOU HAVE TO DOUBLE IT ("\\"), I'LL TRY TO AUTOMATIZZATE THIS TOO            #
+#          PRECAUTIONS: WHEN YOU PUT A BACKSLASH ("\") YOU HAVE TO DOUBLE IT ("\\"), I'LL TRY TO AUTOMATIZZATE THIS            #
 #																															   #
 ################################################################################################################################
 #																															   #
@@ -30,6 +29,6 @@
 [emuNANDTool]
 path = C:\\Users\\Essentio\\Desktop\\emuNANDTool_1.0.3.exe
 [Reboot.MS]
-url = http://reboot.ms
+url = reboot.ms
 [EasyKeyMap Tool]
 path = C:\\Users\\Essentio\\Desktop\\easykeymap_windows_2_03_01\\easykeymap.exe
