Automatically converts \ and / to \\ in path

--- a/config.ini
+++ b/config.ini
@@ -11,10 +11,6 @@
 #																															   #
 ################################################################################################################################
 #																															   #
-#          PRECAUTIONS: WHEN YOU PUT A BACKSLASH ("\") YOU HAVE TO DOUBLE IT ("\\"), I'LL TRY TO AUTOMATIZZATE THIS            #
-#																															   #
-################################################################################################################################
-#																															   #
 #                      USE "path" TO LAUNCH AN .exe, AND "url" TO OPEN THE URL INSIDE YOUR DEFAULT BROWSER                     #
 #                                            USE SECTIONS ("[Stuff]") TO NAME THINGS                                           #
 #																															   #
@@ -27,8 +23,8 @@
 [Settings]
 # TBD
 [emuNANDTool]
-path = C:\\Users\\Essentio\\Desktop\\emuNANDTool_1.0.3.exe
+path = C:/Users/Essentio/Desktop/emuNANDTool_1.0.3.exe
 [Reboot.MS]
 url = reboot.ms
 [EasyKeyMap Tool]
-path = C:\\Users\\Essentio\\Desktop\\easykeymap_windows_2_03_01\\easykeymap.exe
+path = C:/Users/Essentio/Desktop/easykeymap_windows_2_03_01/easykeymap.exe
