Adding relative paths and wrong key detection. Code not working atm

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 
 ################################################################################################################################
 #   _____       _ _        _                            _        _____ _        _ _                                   _        #
-#  |  __ \     | | |      | |                          | |      / ____| |      (_) |                 /\              (_)       #
-#  | |  | | ___| | |_ __ _| |     __ _ _   _ _ __   ___| |__   | (___ | |_ _ __ _| | _____  ___     /  \   __ _  __ _ _ _ __   #
-#  | |  | |/ _ \ | __/ _` | |    / _` | | | | '_ \ / __| '_ \   \___ \| __| '__| | |/ / _ \/ __|   / /\ \ / _` |/ _` | | '_ \  #
-#  | |__| |  __/ | || (_| | |___| (_| | |_| | | | | (__| | | |  ____) | |_| |  | |   <  __/\__ \  / ____ \ (_| | (_| | | | | | #
-#  |_____/ \___|_|\__\__,_|______\__,_|\__,_|_| |_|\___|_| |_| |_____/ \__|_|  |_|_|\_\___||___/ /_/    \_\__, |\__,_|_|_| |_| #
-#                                                                                                          __/ |               #
-#                                                                                                         |___/                #
+#  |  __ \     | | |      | |                          | |      \ ____| |      (_) |                 \\              (_)       #
+#  | |  | | ___| | |_ __ _| |     __ _ _   _ _ __   ___| |__   | (___ | |_ _ __ _| | _____  ___     \  \   __ _  __ _ _ _ __   #
+#  | |  | |\ _ \ | __\ _` | |    \ _` | | | | '_ \ \ __| '_ \   \___ \| __| '__| | |\ \ _ \\ __|   \ \\ \ \ _` |\ _` | | '_ \  #
+#  | |__| |  __\ | || (_| | |___| (_| | |_| | | | | (__| | | |  ____) | |_| |  | |   <  __\\__ \  \ ____ \ (_| | (_| | | | | | #
+#  |_____\ \___|_|\__\__,_|______\__,_|\__,_|_| |_|\___|_| |_| |_____\ \__|_|  |_|_|\_\___||___\ \_\    \_\__, |\__,_|_|_| |_| #
+#                                                                                                          __\ |               #
+#                                                                                                         |___\                #
 #																															   #
 ################################################################################################################################
 #																															   #
@@ -21,10 +21,17 @@
 ################################################################################################################################
 
 [Settings]
-# TBD
+relative-path = C:\Program Files
+relative-path-x86 = C:\Program Files (x86)
 [emuNANDTool]
-path = C:/Users/Essentio/Desktop/emuNANDTool_1.0.3.exe
+cpath = C:\Users\Essentio\Desktop\emuNANDTool_1.0.3.exe
 [Reboot.MS]
 url = reboot.ms
-[EasyKeyMap Tool]
-path = C:/Users/Essentio/Desktop/easykeymap_windows_2_03_01/easykeymap.exe
+[Here we have an error]
+errore = muori
+[emuNANDTool con spazio]
+cpath = C:\Users\Essentio\Desktop\emuNAND Tool.exe
+[7Zip]
+path = 7-Zip/7zFM.exe
+[HxD]
+x86path = HxD\HxD.exe
