More Errors(tm). Added relative paths. Automatically adds quotes

--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,9 @@
 #																															   #
 ################################################################################################################################
 #																															   #
-#                      USE "path" TO LAUNCH AN .exe, AND "url" TO OPEN THE URL INSIDE YOUR DEFAULT BROWSER                     #
+#          USE "path" TO LAUNCH EXECUTABLES INSIDE THE RELATIVE PATH, "x86path" FOR ONES INSIDE THE x86 RELATIVE PATH          #
+#                                      USE "cpath" TO LAUNCH EXECUTABLES IN A CUSTOM PATH                                      #
+#                                      USE "url" TO OPEN URLS INSIDE YOUR DEFAULT BROWSER                                      #
 #                                            USE SECTIONS ("[Stuff]") TO NAME THINGS                                           #
 #																															   #
 ################################################################################################################################
@@ -21,15 +23,15 @@
 ################################################################################################################################
 
 [Settings]
-relative-path = C:\Program Files
-relative-path-x86 = C:\Program Files (x86)
+relativepath = C:\Program Files\
+relativepathx86 = C:\Program Files (x86)\
 [emuNANDTool]
 cpath = C:\Users\Essentio\Desktop\emuNANDTool_1.0.3.exe
 [Reboot.MS]
 url = reboot.ms
 [Here we have an error]
 errore = muori
-[emuNANDTool con spazio]
+[emuNANDTool with space]
 cpath = C:\Users\Essentio\Desktop\emuNAND Tool.exe
 [7Zip]
 path = 7-Zip/7zFM.exe
