Removed horrible dirty hack. Fixed https

--- a/config.ini
+++ b/config.ini
@@ -27,8 +27,12 @@ relativepath = C:\Program Files\
 relativepathx86 = C:\Program Files (x86)\
 [emuNANDTool]
 cpath = C:\Users\Essentio\Desktop\emuNANDTool_1.0.3.exe
-[Reboot.MS]
+[Reboot.MS without http]
 url = reboot.ms
+[Reboot.MS with http]
+url = http://reboot.ms
+[Reboot.MS with https]
+url = https://reboot.ms
 [Here we have an error]
 errore = muori
 [emuNANDTool with space]
